@@ -2,7 +2,9 @@
 
 Changes in version 1.3.1
 - Adapt to `MSnbase 2.7.2` with internal fragments; see
-    #82.
+    #82 [2018-06-03].
+- Fix `FragmentViews` start/end/width and labels for internal fragments
+    [2018-06-03].
 
 Changes in version 1.3.0
 - New version for Bioc 3.8 (devel)
